<resources>
    <string name="app_name">MIUI XPERIA Settings</string>
    <string name="button">Buttons</string>
    <string name="navigation_bar_show_tittle">Disable Navigation Bar</string>
    <string name="camera_switch_tittle">Default Camera</string>
    <string name="camera_switch_cyanogen_summary">CyanogenMod Camera</string>
    <string name="camera_switch_nubia_summary">Nubia Camera</string>
    <string name="mipop">Mi-Pop</string>
    <string name="v4a">VIPER4android FX</string>
    <string name="dialog_message">Reboot required to apply changes. Reboot Now?</string>
    <string name="dialog_ok">Soft Reboot</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_reboot">Please restart your phone manually to applied changes...</string>
    <string name="about_title">About</string>
    <string name="density_edit_tittle">Adjust screen DPI</string>
    <string name="density_message">please enter a reasonable range of values(280-360)\nThis operation may lead to frequent system FC, careful revision</string>
    <string name="density_error">Warning:Input Error!</string>
    <string name="density_switch_260_summary">260 dpi</string>
    <string name="density_switch_280_summary">280 dpi</string>
    <string name="density_switch_300_summary">300 dpi</string>
    <string name="density_switch_320_summary">320 dpi</string>
    <string name="density_switch_340_summary">340 dpi</string>
    <string name="supersu_tittle">SuperSU</string>
    <string name="performance_tittle">Performance Control</string>
    <string name="device_spec_error">Sorry, You\'re NOT using MIUI ROM for XPERIA SP by imanesaurus</string>
    <string name="density_switch_270_summary">270 dpi</string>
    <string name="density_switch_330_summary">330 dpi</string>
    <string name="density_switch_310_summary">310 dpi</string>
    <string name="density_switch_290_summary">290 dpi</string>
    <string name="about_summary">© 2015 Xperia MIUI Tools</string>
    <string name="about_summary_text1">Powered by : imanesaurus</string>
    <string name="about_email_summary">(pirmansah.otoluwa@gmail.com)</string>
    <string name="about_summary_text3">Thank you for using this rom</string>
    <string name="about_summary_text4">If you like this rom, feel free to buy me a cofee</string>
    <string name="about_summary_text5">with click PayPal image below:</string>
    <string name="find_me_text">Find Me :</string>
    <string name="dialog_restart">Restart</string>
</resources>
