<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    style="@style/CustomTheme">

    <ImageView
        android:id="@+id/gp_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/gplus_lg"
        android:layout_alignTop="@+id/twit_logo"
        android:layout_toStartOf="@+id/twit_logo" />

    <ImageView
        android:id="@+id/pay_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/pay_lg"
        android:layout_below="@+id/donattext"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/git_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/git_lg"
        android:clickable="true"
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/pay_logo" />

    <ImageView
        android:id="@+id/fb_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/fb_lg"
        android:layout_alignTop="@+id/git_logo"
        android:layout_toEndOf="@+id/git_logo" />

    <ImageView
        android:id="@+id/twit_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/twit_lg"
        android:layout_alignTop="@+id/git_logo"
        android:layout_toStartOf="@+id/git_logo" />

    <ImageView
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:id="@+id/my_icon"
        android:background="@drawable/imanesaurus_lg"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView"
        android:layout_below="@+id/my_icon"
        android:layout_centerHorizontal="true"
        android:text="@string/about_summary"
        android:textColor="#ffaaaaaa"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/xda_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/xda_lg"
        android:layout_alignBottom="@+id/fb_logo"
        android:layout_toEndOf="@+id/fb_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_summary_text1"
        android:id="@+id/about_summary_text1"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_email_summary"
        android:id="@+id/about_summary_text2"
        android:layout_below="@+id/about_summary_text1"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_summary_text3"
        android:id="@+id/thankyoutext"
        android:textColor="#ffff8158"
        android:layout_below="@+id/about_summary_text2"
        android:layout_alignEnd="@+id/my_icon"
        android:layout_marginTop="18dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_summary_text4"
        android:id="@+id/likethistext"
        android:textColor="#ffff8158"
        android:layout_below="@+id/thankyoutext"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/about_summary_text5"
        android:id="@+id/donattext"
        android:textColor="#ffff8158"
        android:textAlignment="center"
        android:layout_below="@+id/likethistext"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/find_me_text"
        android:id="@+id/find_me_text"
        android:layout_above="@+id/git_logo"
        android:layout_centerHorizontal="true"
        android:textStyle="bold" />

</RelativeLayout>